--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -817,7 +817,7 @@ section {
     text-align: center;
     font-size: 24px;
     font-weight: 600;
-    margin: 5px 30px;
+    margin: 15px 30px;
     padding: 10px 0;
     cursor: pointer;
 }
@@ -825,12 +825,15 @@ section {
     text-align: center;
     font-size: 24px;
     font-weight: 600;
-    margin: 5px 30px;
+    margin: 15px 30px;
     padding: 10px 15px;
     cursor: pointer;
 }
 .Navbar a:after {
     display: none;
+}
+.Navbar li {
+    margin-top:10px;
 }
 .open {
     left: 30%}
