--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -943,6 +943,7 @@ section {
 }@media(max-width:840px) {
     .home-text {
     order: 2;
+    margin-top:40px;
 }
 .home-img {
     width: 330px;
@@ -1092,7 +1093,7 @@ section {
     font-size: var(--big-font);
     font-weight: 700;
     line-height: 1.2;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 .home-text p {
     max-width: 370px;
@@ -1164,7 +1165,7 @@ section {
     position: relative;
     width: 100%;
     height: 100%;
-    display: grid;
+    display: block;
     grid-template-columns: 1fr;
     align-items: center;
     gap: 2rem;
@@ -1177,7 +1178,7 @@ section {
     font-size: var(--big-font);
     font-weight: 700;
     line-height: 1.2;
-    margin-bottom: 2rem;
+    margin-bottom: 1rem;
 }
 .home-text p {
     max-width: 370px;
@@ -2496,7 +2497,7 @@ img, video {
 }
 .text-\[\#36699f\] {
     --tw-text-opacity:  1;
-    color: rgb(54 105 159/var(--tw-text-opacity));
+    color: rgb(1 1 1/var(--tw-text-opacity));
 }
 .text-\[\#507ba9\] {
     --tw-text-opacity:  1;
