--- a/assets/css/test.css
+++ b/assets/css/test.css
@@ -115,6 +115,10 @@ header {
     padding: 15px 11.8%;
     transition: all ease .52s;
 }
+.max-wf
+{
+max-width: 70vw;
+}
 .logo img {
     width: 120px;
     height: auto;
@@ -792,6 +796,10 @@ section {
     --h2-font:  1rem;
     --p-font:  .9rem;
 }
+.max-wf
+{
+max-width: 70vw;
+}
 #menu-icon {
     position: relative;
     right: 15px;
@@ -857,6 +865,11 @@ section {
     --big-font:  2rem;
     --h2-font:  2rem;
     --p-font:  .9rem;
+}
+.max-wf
+{
+max-width: 100vw;
+padding: 20px;
 }
 section {
     padding: 60px 4% 50px;
